--- a/covid/style.css
+++ b/covid/style.css
@@ -1,7 +1,9 @@
-       body {
-       font-family:'Righteous', cursive;
+       
+*{
+font-family:'Righteous', cursive;
+}
+body {
        background: linear-gradient(to right, #56CCF2, #2F80ED);
-       border: 2px solid #2F80ED;
        }
        #ico {
        height: 45px;
