--- a/covid/style.css
+++ b/covid/style.css
@@ -1,6 +1,6 @@
-       
+       @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 *{
-font-family:'Righteous', cursive;
+font-family:'Poppins', sans-serif;
 }
 body {
        background: linear-gradient(to right, #56CCF2, #2F80ED);
